load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gozstd",
    srcs = [
        "dict.go",
        "doc.go",
        "gozstd.go",
        "libzstd_darwin_amd64.go",
        "libzstd_darwin_arm64.go",
        "libzstd_freebsd_amd64.go",
        "libzstd_linux_amd64.go",
        "libzstd_linux_arm.go",
        "libzstd_linux_arm64.go",
        "libzstd_windows_amd64.go",
        "reader.go",
        "stream.go",
        "writer.go",
        "zdict.h",
        "zstd.h",
        "zstd_errors.h",
    ],
    cgo = True,
    clinkopts = select({
        "@io_bazel_rules_go//go/platform:android_amd64": [
            "./libzstd_linux_amd64.a",
        ],
        "@io_bazel_rules_go//go/platform:android_arm": [
            "./libzstd_linux_arm.a",
        ],
        "@io_bazel_rules_go//go/platform:android_arm64": [
            "./libzstd_linux_arm64.a",
        ],
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "./libzstd_darwin_amd64.a",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm64": [
            "./libzstd_darwin_arm64.a",
        ],
        "@io_bazel_rules_go//go/platform:freebsd_amd64": [
            "./libzstd_freebsd_amd64.a",
        ],
        "@io_bazel_rules_go//go/platform:ios_amd64": [
            "./libzstd_darwin_amd64.a",
        ],
        "@io_bazel_rules_go//go/platform:ios_arm64": [
            "./libzstd_darwin_arm64.a",
        ],
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "./libzstd_linux_amd64.a",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm": [
            "./libzstd_linux_arm.a",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            "./libzstd_linux_arm64.a",
        ],
        "@io_bazel_rules_go//go/platform:windows_amd64": [
            "./libzstd_windows_amd64.a",
        ],
        "//conditions:default": [],
    }),
    copts = ["-O3"],
    importpath = "github.com/valyala/gozstd",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":gozstd",
    visibility = ["//visibility:public"],
)

go_test(
    name = "gozstd_test",
    srcs = [
        "dict_example_test.go",
        "dict_test.go",
        "gozstd_example_test.go",
        "gozstd_test.go",
        "gozstd_timing_test.go",
        "reader_example_test.go",
        "reader_test.go",
        "reader_timing_test.go",
        "stream_test.go",
        "stream_timing_test.go",
        "writer_example_test.go",
        "writer_test.go",
        "writer_timing_test.go",
    ],
    embed = [":gozstd"],
)
